--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230907124356">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230907132056">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,7 +53,7 @@
 								<span class="preview__subtitle-text"><span class="text-decor">качество</span> — на первом месте</span>
 							</div>
 							<svg class="preview__decor" width="111" height="64" viewBox="0 0 111 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path id="Vector 1" d="M0.833333 3.5C0.833333 4.97276 2.02724 6.16667 3.5 6.16667C4.97276 6.16667 6.16667 4.97276 6.16667 3.5C6.16667 2.02724 4.97276 0.833333 3.5 0.833333C2.02724 0.833333 0.833333 2.02724 0.833333 3.5ZM107.5 17L104.432 21.8908L110.201 22.1025L107.5 17ZM3 3.5C2.99999 7.12942 3.81542 9.63992 5.33411 11.2968C6.8541 12.9551 8.9996 13.6722 11.4662 13.8887C13.9288 14.1049 16.7804 13.8279 19.7848 13.4352C22.8086 13.04 25.9852 12.5281 29.1754 12.2481C35.5601 11.6876 41.7837 12.0824 46.4257 16.112C51.0665 20.1405 54.2633 27.9246 54.2633 42.5H55.2633C55.2633 27.8254 52.0523 19.672 47.0812 15.3568C42.1113 11.0426 35.5191 10.6874 29.0879 11.2519C25.8702 11.5344 22.6388 12.0537 19.6552 12.4437C16.6522 12.8362 13.8969 13.0982 11.5536 12.8925C9.21421 12.6872 7.35477 12.0214 6.0713 10.6211C4.78654 9.21945 3.99999 6.99558 4 3.5L3 3.5ZM54.2633 42.5C54.2633 51.3269 57.3969 57.2615 62.2509 60.431C67.0894 63.5904 73.5265 63.9288 79.9959 61.8068C92.941 57.5608 106.208 43.4226 107.833 21.5383L106.836 21.4642C105.238 42.9721 92.2189 56.7452 79.6843 60.8566C73.4139 62.9133 67.3125 62.5418 62.7976 59.5937C58.2982 56.6557 55.2633 51.0851 55.2633 42.5H54.2633Z" fill="#F9F9F9" />
+								<path d="M0.833333 3.5C0.833333 4.97276 2.02724 6.16667 3.5 6.16667C4.97276 6.16667 6.16667 4.97276 6.16667 3.5C6.16667 2.02724 4.97276 0.833333 3.5 0.833333C2.02724 0.833333 0.833333 2.02724 0.833333 3.5ZM107.5 17L104.432 21.8908L110.201 22.1025L107.5 17ZM3 3.5C2.99999 7.12942 3.81542 9.63992 5.33411 11.2968C6.8541 12.9551 8.9996 13.6722 11.4662 13.8887C13.9288 14.1049 16.7804 13.8279 19.7848 13.4352C22.8086 13.04 25.9852 12.5281 29.1754 12.2481C35.5601 11.6876 41.7837 12.0824 46.4257 16.112C51.0665 20.1405 54.2633 27.9246 54.2633 42.5H55.2633C55.2633 27.8254 52.0523 19.672 47.0812 15.3568C42.1113 11.0426 35.5191 10.6874 29.0879 11.2519C25.8702 11.5344 22.6388 12.0537 19.6552 12.4437C16.6522 12.8362 13.8969 13.0982 11.5536 12.8925C9.21421 12.6872 7.35477 12.0214 6.0713 10.6211C4.78654 9.21945 3.99999 6.99558 4 3.5L3 3.5ZM54.2633 42.5C54.2633 51.3269 57.3969 57.2615 62.2509 60.431C67.0894 63.5904 73.5265 63.9288 79.9959 61.8068C92.941 57.5608 106.208 43.4226 107.833 21.5383L106.836 21.4642C105.238 42.9721 92.2189 56.7452 79.6843 60.8566C73.4139 62.9133 67.3125 62.5418 62.7976 59.5937C58.2982 56.6557 55.2633 51.0851 55.2633 42.5H54.2633Z" fill="#F9F9F9" />
 							</svg>
 						</div>
 						<div class="preview__image-ibg preview__image"><picture><source srcset="img/preview.webp" type="image/webp"><img src="img/preview.jpg" alt="HPL-панели" width="890" height="660"></picture></div>
@@ -169,22 +169,21 @@
 					<div class="suppliers__slider swiper">
 						<div class="suppliers__wrapper swiper-wrapper">
 							<div class="suppliers__slide swiper-slide">
-								<picture><source data-srcset="img/suppliers/suppliers1.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/suppliers/suppliers1.png" alt="Formica" width="150" height="81"></picture>
+								<picture><source srcset="img/suppliers/suppliers1.webp" type="image/webp"><img src="img/suppliers/suppliers1.png" alt="Formica" width="150" height="81"></picture>
 							</div>
 							<div class="suppliers__slide swiper-slide">
-								<img data-src="img/suppliers/suppliers2.svg" alt="Lemark" width="265" height="80">
+								<img src="img/suppliers/suppliers2.svg" alt="Lemark" width="265" height="80">
 							</div>
 							<div class="suppliers__slide swiper-slide">
-								<img data-src="img/suppliers/suppliers3.svg" alt="Abet" width="223" height="77">
+								<img src="img/suppliers/suppliers3.svg" alt="Abet" width="223" height="77">
 							</div>
 							<div class="suppliers__slide swiper-slide">
-								<img data-src="img/suppliers/suppliers4.svg" alt="SlopLast" width="104" height="111">
+								<img src="img/suppliers/suppliers4.svg" alt="SlopLast" width="104" height="111">
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- <div class="suppliers__content"></div> -->
 			<section class="catalog">
 				<div class="catalog__container">
 					<h2 class="catalog__title title">В нашем каталоге более <span class="color-decor">3000</span> видов декора
@@ -313,22 +312,22 @@
 								<div class="examples__wrapper swiper-wrapper">
 									<div class="examples__slide swiper-slide examples-slide">
 										<figure class="examples-slide__figure" style="background-image:url(img/slider.png)">
-											<picture><source srcset="img/slider.webp" type="image/webp"><img src="img/slider.png" class="examples-slide__img" /></picture>
+											<picture><source srcset="img/slider.webp" type="image/webp"><img src="img/slider.png" class="examples-slide__img" alt="Первый слайд" /></picture>
 										</figure>
 									</div>
 									<div class="examples__slide swiper-slide examples-slide">
 										<figure class="examples-slide__figure" style="background-image:url(img/preview.jpg)">
-											<picture><source srcset="img/preview.webp" type="image/webp"><img src="img/preview.jpg" class="examples-slide__img" /></picture>
+											<picture><source srcset="img/preview.webp" type="image/webp"><img src="img/preview.jpg" class="examples-slide__img" alt="Второй слайд" /></picture>
 										</figure>
 									</div>
 									<div class="examples__slide swiper-slide examples-slide">
 										<figure class="examples-slide__figure" style="background-image:url(img/selection.jpg)">
-											<picture><source srcset="img/selection.webp" type="image/webp"><img src="img/selection.jpg" class="examples-slide__img" /></picture>
+											<picture><source srcset="img/selection.webp" type="image/webp"><img src="img/selection.jpg" class="examples-slide__img" alt="Третий слайд" /></picture>
 										</figure>
 									</div>
 									<div class="examples__slide swiper-slide examples-slide">
 										<figure class="examples-slide__figure" style="background-image:url(img/slider.png)">
-											<picture><source srcset="img/slider.webp" type="image/webp"><img src="img/slider.png" class="examples-slide__img" /></picture>
+											<picture><source srcset="img/slider.webp" type="image/webp"><img src="img/slider.png" class="examples-slide__img" alt="Четвёртый слайд" /></picture>
 										</figure>
 									</div>
 								</div>
@@ -663,17 +662,8 @@
 			</div>
 		</footer>
 	</div>
-	<!-- <!-- <div id="popup" aria-hidden="true" class="popup">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close btn-reset" aria-label="Закрыть">Закрыть</button>
-			<div class="popup__text">
-				Text
-			</div>
-		</div>
-	</div>
-</div> --> -->
-	<script src="js/app.min.js?_v=20230907124356"></script>
+	<!--  -->
+	<script src="js/app.min.js?_v=20230907132056"></script>
 </body>
 
 </html>
