--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230907133724">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230920115416">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -168,6 +168,18 @@
 						(HPL)</h2>
 					<div class="suppliers__slider swiper">
 						<div class="suppliers__wrapper swiper-wrapper">
+							<div class="suppliers__slide swiper-slide">
+								<picture><source srcset="img/suppliers/suppliers1.webp" type="image/webp"><img src="img/suppliers/suppliers1.png" alt="Formica" width="150" height="81"></picture>
+							</div>
+							<div class="suppliers__slide swiper-slide">
+								<img src="img/suppliers/suppliers2.svg" alt="Lemark" width="265" height="80">
+							</div>
+							<div class="suppliers__slide swiper-slide">
+								<img src="img/suppliers/suppliers3.svg" alt="Abet" width="223" height="77">
+							</div>
+							<div class="suppliers__slide swiper-slide">
+								<img src="img/suppliers/suppliers4.svg" alt="SlopLast" width="104" height="111">
+							</div>
 							<div class="suppliers__slide swiper-slide">
 								<picture><source srcset="img/suppliers/suppliers1.webp" type="image/webp"><img src="img/suppliers/suppliers1.png" alt="Formica" width="150" height="81"></picture>
 							</div>
@@ -663,7 +675,7 @@
 		</footer>
 	</div>
 	<!--  -->
-	<script src="js/app.min.js?_v=20230907133724"></script>
+	<script src="js/app.min.js?_v=20230920115416"></script>
 </body>
 
 </html>
